fixed table selection too wide checkbox, temp removed bundle analyzer

--- a/src/ui/modules/montr-core/index.less
+++ b/src/ui/modules/montr-core/index.less
@@ -161,6 +161,13 @@ h2, .ant-modal-header .ant-modal-title, .ant-drawer-title {
 	text-overflow: ellipsis;
 }
 
+.ant-table.ant-table-small {
+	.ant-table-selection-column {
+		width: auto;
+		min-width: auto;
+	}
+}
+
 .data-form-mode-view {
 	.ant-form-item {
 		margin-bottom: 16px;
